k8s-lab-01/istio-argocd-ingress/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*.k8s.example.com"
    tls:
      mode: SIMPLE
      credentialName: k8s-bevz-net-wildcard-tls
